Introduced judge switch mechanism, improved error handling and introduced environment check. Resource "judges.list" added.